--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <body>
                 <body><h1>Vítej na mém webu!</h1>
                 <p>Toto je můj první web vytvořený pomocí GitHubu.</p>    
+                <p class="T">Čau ahoj</p>    
         </body>
 </html>
